# pomodoro-tui

./: .gitignore  LICENSE.md  README.MD  pomodoro.py  project.toml  pyproject.toml  readme.MD  requirements.txt  style.css
pomodoro/: pomodoro.py  style.css
